Fixed a bug where the price wasn't added during add book, implemented a feature to block the admin from deleting a borrowed book, cleaned some code and applied some javascripts to enhance UI and error messages

--- a/Library Management/Views/Admin/AddBook.cshtml
+++ b/Library Management/Views/Admin/AddBook.cshtml
@@ -77,27 +77,27 @@
     <form action="@Url.Action("AddBook", "Admin")" method="post">
         <div class="mb-3">
             <label for="title" class="form-label">Book Title</label>
-            <input id="title" name="title" class="form-control" placeholder="Enter book title" required />
+            <input name="title" class="form-control" placeholder="Enter book title" required />
         </div>
 
         <div class="mb-3">
             <label for="author" class="form-label">Author</label>
-            <input id="author" name="Author" class="form-control" placeholder="Enter author name" required />
+            <input name="Author" class="form-control" placeholder="Enter author name" required />
         </div>
 
         <div class="mb-3">
             <label for="ISBN" class="form-label">ISBN</label>
-            <input id="ISBN" name="ISBN" class="form-control" placeholder="Enter ISBN" required />
+            <input name="ISBN" class="form-control" placeholder="Enter ISBN" required />
         </div>
 
         <div class="mb-3">
             <label for="totalQuantity" class="form-label">Quantity</label>
-            <input id="totalQuantity" name="totalQuantity" type="number" class="form-control" placeholder="Enter total quantity" required />
+            <input name="totalQuantity" type="number" class="form-control" placeholder="Enter total quantity" required />
         </div>
 
         <div class="mb-4">
             <label for="rentPrice" class="form-label">Rent Price</label>
-            <input id="rentPrice" name="rentPrice" type="number" class="form-control" placeholder="Enter rent price" required />
+            <input name="rentPrice" type="number" class="form-control" placeholder="Enter rent price" required />
         </div>
 
         <div class="d-flex justify-content-between">
