--- a/Library Management/Views/Shared/_Layout.cshtml
+++ b/Library Management/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Library_Management.styles.css" asp-append-version="true" />
+    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
+
 </head>
 <body>
     <header>
