--- a/Library Management/Views/UserHome/UserHome.cshtml
+++ b/Library Management/Views/UserHome/UserHome.cshtml
@@ -7,6 +7,7 @@
 <style>
     body {
         background: linear-gradient(to right, #f2f6ff, #d9e4f5);
+        font-family: 'SF Pro Display', sans-serif;
     }
 
     .page-header {
