--- a/Library Management/Views/Admin/AdminHome.cshtml
+++ b/Library Management/Views/Admin/AdminHome.cshtml
@@ -5,7 +5,8 @@
 
 <style>
     body {
-    background: linear-gradient(to right, #d9e4f5, #f2f6ff);
+        font-family: 'SF Pro Display', sans-serif;
+        background: linear-gradient(to right, #d9e4f5, #f2f6ff);
     }
 
     .dashboard-card {
