--- a/Library Management/Views/Admin/EditBook.cshtml
+++ b/Library Management/Views/Admin/EditBook.cshtml
@@ -6,6 +6,7 @@
 
 <style>
     body {
+        font-family: 'SF Pro Display', sans-serif;
         background: linear-gradient(to right, #d9e4f5, #f2f6ff);
     }
 
