--- a/Library Management/Views/Login/Login.cshtml
+++ b/Library Management/Views/Login/Login.cshtml
@@ -4,6 +4,7 @@
 
 <style>
     body {
+        font-family: 'SF Pro Display', sans-serif;
         background: linear-gradient(to right, #d9e4f5, #f2f6ff);
     }
 
