--- a/Library Management/Views/UserHome/BorrowHistory.cshtml
+++ b/Library Management/Views/UserHome/BorrowHistory.cshtml
@@ -6,7 +6,8 @@
 
 <style>
     body {
-    background: linear-gradient(to right, #d9e4f5, #f2f6ff);
+        font-family: 'SF Pro Display', sans-serif;
+        background: linear-gradient(to right, #d9e4f5, #f2f6ff);
     }
 
     .page-header {
